--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="type">example text</div>
     <script src="main.js" defer></script>
 </body>
 </html>
