--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="type">example text</div>
+    <div id="maincontainer">
+    <div id="sidebar">
+        <div id="splash"><img src="splash.jpg" alt="" srcset=""></div>
+        <div id="sideText"> <img src="odin.png" alt="" srcset="">
+            <div id="odinText">Odin</div></div>
+            <div id="footer">@Summer</div>
+    </div>
+    </div>
+    
     <script src="main.js" defer></script>
 </body>
 </html>
