doing work for the right side of the page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,17 @@
         <div id="splash"><img src="splash.jpg" alt="" srcset=""></div>
         <div id="sideText"> <img src="odin.png" alt="" srcset="">
             <div id="odinText">Odin</div></div>
-            <div id="footer">@Summer</div>
+            <div id="footer"> <img src="mark.png" alt="" srcset=""> Summer</div>
+    </div>
+    <div id="rightSide">
+        <div id="warnUser">
+            This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up now to get started.
+            <p>
+                You know you want to.
+        </div>
+        <div id="formS">
+            <h2>Let's do this!</h2>
+        </div>
     </div>
     </div>
     
