laid down the starter for form control

--- a/index.html
+++ b/index.html
@@ -21,8 +21,16 @@
             <p>
                 You know you want to.
         </div>
+        <h2>Let's do this!</h2>
         <div id="formS">
-            <h2>Let's do this!</h2>
+            <form>
+            <div id="firstName"></div>
+            <label for="name">First Name</label></br>
+            <input type="text" name="first_name" id="Fname">
+            <div id="lastName"></div>
+            <label for="name">Last Name</label></br>
+            <input type="text" name="last_name" id="lname">
+            </form>
         </div>
     </div>
     </div>
