--- a/index.html
+++ b/index.html
@@ -23,13 +23,25 @@
         </div>
         <h2>Let's do this!</h2>
         <div id="formS">
-            <form>
-            <div id="firstName"></div>
+            <form action = "" method="post">
+            <fieldset>
+            <div class="row1">
+            <div id="firstName">
             <label for="name">First Name</label></br>
-            <input type="text" name="first_name" id="Fname">
-            <div id="lastName"></div>
+            <input type="text" name="first_name" id="Fname"></div>
+            <div id="lastName">
             <label for="name">Last Name</label></br>
-            <input type="text" name="last_name" id="lname">
+            <input type="text" name="last_name" id="lname"></div>
+            </div>
+            <div class="row2">
+            <div id="eMails">
+            <label for="email">Email</label></br>
+            <input type="email" name="mail_address" id="eMail"></div>
+            <div id="phoneNo">
+            <label for="phone">Phone Number</label></br>
+            <input type="tel" name="phone" id="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}"></div>
+            </div>
+            </fieldset>
             </form>
         </div>
     </div>
