--- a/index.html
+++ b/index.html
@@ -41,6 +41,14 @@
             <label for="phone">Phone Number</label></br>
             <input type="tel" name="phone" id="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}"></div>
             </div>
+            <div class="row3">
+            <div id="passWord">
+            <label for="pass">Password</label></br>
+            <input type="password" name="password" id="pass" minlength="8" required></div>  
+            <div id="passWordC">
+            <label for="pass">Confirm Password</label></br>
+            <input type="password" name="password" id="pass" minlength="8" required></div>
+            </div>
             </fieldset>
             </form>
         </div>
